# demucs

./: .devcontainer.json  .gitignore  .gitmodules  requirements.txt  requirements_minimal.txt
.github/workflows/: linter.yml  release.yml  tests.yml
benchmark/: benchmark-cpp-onnx.py  benchmark-pytorch.py  benchmark_common.py  benchmark_results_cpp.json  benchmark_results_pytorch.json
cppscripts/: Makefile
cppscripts/src/: demucs.hpp  model_apply.cpp  model_inference.cpp  tensor.hpp
cppscripts/src_cli/: CMakeLists.txt  demucs.cpp
demucs/: api.py  apply.py  audio.py  demucs.py  hdemucs.py  htdemucs.py  istft.py  repitch.py  spec.py  stft.py  train.py  utils.py  wav.py
docs/: benchmark.md  onnx.md
scripts/: convert-model-to-ort.sh  convert-pth-to-onnx.py
tests/: test_istft.py  test_onnx_flag.py  test_stft.py
